minor fixes and code cleanup

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <body>
     <h1>Method of 3</h1>
     <form name="mainForm">
-      <input name="lefttop">
-      <input name="leftbottom">
-      <input name="righttop">
+      <label><input name="lefttop"><i>˟</i></label>
+      <label><input name="leftbottom"><i>˟</i></label>
+      <label><input name="righttop"><i>˟</i></label>
       <input name="rightbottom">
     </form>
     <script type="module" src="/src/main.ts"></script>
